responsivness added to visit page

--- a/visit.html
+++ b/visit.html
@@ -219,15 +219,17 @@
             </p>
           </div>
           <div class="info" id="map">
-            <h2>Location</h2>
-            <p>The Museum is Located at:</p>
-            <p id="street">Nygårdsgaten 112</p>
-            <p id="postal">5008 Bergen</p>
+            <div id="location">
+              <h2>Location</h2>
+              <p>The Museum is Located at:</p>
+              <p id="street">Nygårdsgaten 112</p>
+              <p id="postal">5008 Bergen</p>
+            </div>
             <iframe
               title="address to Community Science Museum "
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1971.6798987692655!2d5.331311116446823!3d60.384447582040345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x463cfeacef54f159%3A0x62678fec8f2c1061!2sNyg%C3%A5rdsgaten%20112%2C%205008%20Bergen!5e0!3m2!1sen!2sno!4v1606574333874!5m2!1sen!2sno"
               width="200"
-              height="325"
+              height="350"
               allowfullscreen=""
             ></iframe>
           </div>
