responsiveness added to about page

--- a/about_us.html
+++ b/about_us.html
@@ -184,7 +184,7 @@
 
     <main>
       <div class="main-wrapper">
-        <h1>"let us explore together"</h1>
+        <h1>let us explore together</h1>
         <section class="vision">
           <div class="vision item-1">
             <p>
