--- a/index.html
+++ b/index.html
@@ -268,7 +268,6 @@
       <div class="secondary-container">
         <section class="news">
           <h4>NEWS: Special Events & Exhibitions</h4>
-
           <label class="aeronautic-label" for="aeronautic">
             <div id="aeronautic-image">
               <img src="images\aeronautic.jpg" alt="" />
@@ -279,6 +278,7 @@
           <div class="aeronautic-wrapper">
             <figure class="news">
               <img src="images\aeronautic.jpg" alt="" class="mobile" />
+              <img src="images\aeronautic_medium.jpg" alt="" class="medium" />
               <img src="images\aeronautic.jpg" alt="" class="large-screen" />
             </figure>
             <div class="circle-wrapper">
@@ -290,9 +290,9 @@
               <h5>Visiting Professor Of Aeronautics</h5>
               <p>
                 It is our pleasure to announce that Professor Sheila Widnall
-                from the Massachusetts Institue of Technology will be delivering
-                2 lectures on the development of aeronautics and where the
-                future lies in this exciting space.
+                from the Massachusetts Institue of Technology, will be
+                delivering two lectures on the development of aeronautics, and
+                where the future lies in this exciting space.
               </p>
             </div>
           </div>
@@ -307,6 +307,7 @@
           <div class="energica-wrapper">
             <figure class="news">
               <img src="images\energica.jpg" alt="" class="mobile" />
+              <img src="images\energica_medium.jpg" alt="" class="medium" />
               <img src="images\energica.jpg" alt="" class="large-screen" />
             </figure>
             <div class="circle-wrapper">
@@ -316,11 +317,11 @@
             </div>
             <div class="news">
               <h5>Energica Exhibition</h5>
-              <p>
+              <p id="energica-p1">
                 On loan from the NEMO Science Museum in Amsterdam, the
                 Energetica exhibition is coming to the Community Science Museum.
               </p>
-              <p>
+              <p id="energica-p2">
                 It’s a series of installations that allow visitors to experience
                 the power of the elements as we harness them. From solar energy
                 powering lighting, to ‘Wind Island’ that shows how turbines are
@@ -332,6 +333,7 @@
           <div class="news-wrapper">
             <figure class="news">
               <img src="images\t-rex.jpg" alt="" class="mobile" />
+              <img src="images\t-rex_medium.jpg" alt="" class="medium" />
               <img src="images\t-rex.jpg" alt="" class="large-screen" />
             </figure>
             <div class="circle-wrapper">
