--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="bubble">
               <div class="arrow-up"></div>
               <a href="about_us.html">
-                <h3>Let us Explore Together</h3>
+                <h3>Let Us Explore Together</h3>
                 <div id="about">
                   <p>Learn more ABOUT US and our VISON</p>
                   <span class="fa fa-arrow-circle-right"></span>
@@ -288,11 +288,14 @@
             </div>
             <div class="news">
               <h5>Visiting Professor Of Aeronautics</h5>
-              <p>
+              <p id="energica-p1">
                 It is our pleasure to announce that Professor Sheila Widnall
-                from the Massachusetts Institue of Technology, will be
-                delivering two lectures on the development of aeronautics, and
-                where the future lies in this exciting space.
+                from the Massachusetts Institue of Technology will visit our
+                museum.
+              </p>
+              <p id="energica-p2">
+                She will be delivering two lectures on the development of
+                aeronautics, and where the future lies in this exciting space.
               </p>
             </div>
           </div>
