updates to main image

--- a/index.html
+++ b/index.html
@@ -193,10 +193,7 @@
               <h2>entrance is <em>FREE FOR ALL</em></h2>
               <h2><em>GUIDED TOUR</em> every hour</h2>
             </hgroup>
-            <div class="clock">
-              <span class="fa fa-clock"></span>
-              <p>OPEN TODAY UNTIL 16:00</p>
-            </div>
+
             <div class="button">
               <a href="www.ticketmaster.com">
                 <p class="button">BUY TICKETS</p></a
@@ -255,6 +252,10 @@
             >
           </div>
         </section>
+        <div class="clock">
+          <span class="fa fa-clock"></span>
+          <p>OPEN TODAY UNTIL 16:00</p>
+        </div>
         <p id="tour">Guided Tour 70 NOK per Person</p>
         <p id="tickets">Online Tickets Provided by:</p>
         <figure id="ticketmaster">
@@ -288,12 +289,12 @@
             </div>
             <div class="news">
               <h5>Visiting Professor Of Aeronautics</h5>
-              <p id="energica-p1">
+              <p class="small-text">
                 It is our pleasure to announce that Professor Sheila Widnall
                 from the Massachusetts Institue of Technology will visit our
                 museum.
               </p>
-              <p id="energica-p2">
+              <p class="small-text">
                 She will be delivering two lectures on the development of
                 aeronautics, and where the future lies in this exciting space.
               </p>
@@ -320,11 +321,11 @@
             </div>
             <div class="news">
               <h5>Energica Exhibition</h5>
-              <p id="energica-p1">
+              <p class="small-text">
                 On loan from the NEMO Science Museum in Amsterdam, the
                 Energetica exhibition is coming to the Community Science Museum.
               </p>
-              <p id="energica-p2">
+              <p class="small-text">
                 It’s a series of installations that allow visitors to experience
                 the power of the elements as we harness them. From solar energy
                 powering lighting, to ‘Wind Island’ that shows how turbines are
