--- a/exhibitions.html
+++ b/exhibitions.html
@@ -284,7 +284,8 @@
                 <p>
                   From useful home applications of AI to industrial uses of
                   robotics, the future is here. You can even say hello and shake
-                  the hand of Rob the Robot.
+                  the hand of Rob the Robot. Rob is a stat of the art robot,
+                  that you can iteract with.
                 </p>
               </div>
             </div>
@@ -306,6 +307,12 @@
                   the planet, the more important it becomes that scientists
                   explore how to create a sustainable future not just for humans
                   but for the whole planet.
+                </p>
+                <p>
+                  From January 4th 2021 we will have the Energetica exhibition
+                  on loan from the NEMO Science Museum in Amsterdam. This is a
+                  series of installations that allow visitors to experience the
+                  power of the elements as we harness them.
                 </p>
               </div>
             </div>
