updates to home page

--- a/index.html
+++ b/index.html
@@ -271,16 +271,31 @@
           <h4>NEWS: Special Events & Exhibitions</h4>
           <label class="aeronautic-label" for="aeronautic">
             <div id="aeronautic-image">
-              <img src="images\aeronautic.jpg" alt="" />
+              <img
+                src="images\aeronautic.jpg"
+                alt="A jet pilot in full flight outfit sitting in a simulated cockpit facing the instruments"
+              />
             </div>
             <!-- <span class="fa fa-angle-left"></span> -->
           </label>
           <input type="checkbox" id="aeronautic" />
           <div class="aeronautic-wrapper">
             <figure class="news">
-              <img src="images\aeronautic.jpg" alt="" class="mobile" />
-              <img src="images\aeronautic_medium.jpg" alt="" class="medium" />
-              <img src="images\aeronautic.jpg" alt="" class="large-screen" />
+              <img
+                src="images\aeronautic.jpg"
+                alt="A jet pilot in full flight outfit sitting in a simulated cockpit facing the instruments"
+                class="mobile"
+              />
+              <img
+                src="images\aeronautic_medium.jpg"
+                alt="A jet pilot in full flight outfit sitting in a simulated cockpit facing the instruments"
+                class="medium"
+              />
+              <img
+                src="images\aeronautic.jpg"
+                alt="A jet pilot in full flight outfit sitting in a simulated cockpit facing the instruments"
+                class="large-screen"
+              />
             </figure>
             <div class="circle-wrapper">
               <div class="selected"></div>
@@ -288,31 +303,48 @@
               <div></div>
             </div>
             <div class="news">
-              <h5>Visiting Professor Of Aeronautics</h5>
-              <p class="small-text">
-                It is our pleasure to announce that Professor Sheila Widnall
-                from the Massachusetts Institue of Technology will visit our
-                museum.
-              </p>
-              <p class="small-text">
-                She will be delivering two lectures on the development of
-                aeronautics, and where the future lies in this exciting space.
-              </p>
+              <div>
+                <h5>Visiting Professor Of Aeronautics</h5>
+                <p>
+                  It is our pleasure to announce that Professor Sheila Widnall
+                  from the Massachusetts Institue of Technology will visit our
+                  museum.
+                </p>
+                <p>
+                  She will be delivering two lectures on the development of
+                  aeronautics, and where the future lies in this exciting space.
+                </p>
+              </div>
             </div>
           </div>
 
           <label class="energica-label" for="energica">
             <div id="energica-image">
-              <img src="images\energica.jpg" alt="" />
+              <img
+                src="images\energica.jpg"
+                alt="Close up photo of a glowing red sphere with beams of electricity radiating from it"
+              />
             </div>
             <!-- <span class="fa fa-angle-right"></span> -->
           </label>
           <input type="checkbox" id="energica" />
           <div class="energica-wrapper">
             <figure class="news">
-              <img src="images\energica.jpg" alt="" class="mobile" />
-              <img src="images\energica_medium.jpg" alt="" class="medium" />
-              <img src="images\energica.jpg" alt="" class="large-screen" />
+              <img
+                src="images\energica.jpg"
+                alt="Close up photo of a glowing red sphere with beams of electricity radiating from it"
+                class="mobile"
+              />
+              <img
+                src="images\energica_medium.jpg"
+                alt="Close up photo of a glowing red sphere with beams of electricity radiating from it"
+                class="medium"
+              />
+              <img
+                src="images\energica.jpg"
+                alt="Close up photo of a glowing red sphere with beams of electricity radiating from it"
+                class="large-screen"
+              />
             </figure>
             <div class="circle-wrapper">
               <div></div>
@@ -320,41 +352,58 @@
               <div class="selected"></div>
             </div>
             <div class="news">
-              <h5>Energica Exhibition</h5>
-              <p class="small-text">
-                On loan from the NEMO Science Museum in Amsterdam, the
-                Energetica exhibition is coming to the Community Science Museum.
-              </p>
-              <p class="small-text">
-                It’s a series of installations that allow visitors to experience
-                the power of the elements as we harness them. From solar energy
-                powering lighting, to ‘Wind Island’ that shows how turbines are
-                able to use and control wind to create power.
-              </p>
+              <div>
+                <h5>Energica Exhibition</h5>
+                <p>
+                  On loan from the NEMO Science Museum in Amsterdam, the
+                  Energetica exhibition is coming to the Community Science
+                  Museum.
+                </p>
+                <p>
+                  It’s a series of installations that allow visitors to
+                  experience the power of the elements as we harness them. From
+                  solar energy powering lighting, to ‘Wind Island’ that shows
+                  how turbines are able to use and control wind to create power.
+                </p>
+              </div>
             </div>
           </div>
 
           <div class="news-wrapper">
             <figure class="news">
-              <img src="images\t-rex.jpg" alt="" class="mobile" />
-              <img src="images\t-rex_medium.jpg" alt="" class="medium" />
-              <img src="images\t-rex.jpg" alt="" class="large-screen" />
+              <img
+                src="images\t-rex.jpg"
+                alt="Close up photo of the head of a of gaping T-Rex sceleton, exposing all it's razorsharp teeth"
+                class="mobile"
+              />
+              <img
+                src="images\t-rex_medium.jpg"
+                alt="Close up photo of the head of a of gaping T-Rex sceleton, exposing all it's razorsharp teeth"
+                class="medium"
+              />
+              <img
+                src="images\t-rex.jpg"
+                alt="Close up photo of the head of a of gaping T-Rex sceleton, exposing all it's razorsharp teeth"
+                class="large-screen"
+              />
             </figure>
             <div class="circle-wrapper">
               <div></div>
               <div class="selected"></div>
               <div></div>
             </div>
-            <div class="news">
-              <h5>Night in the Museum</h5>
-              <p>
-                Get your family together for an exciting night in the museum as
-                you sleep over beside dinosaurs and science displays.
-              </p>
-              <p>
-                Bring your own sleeping bag and get ready to rough it as we go
-                exploring the wonders of science.
-              </p>
+            <div class="news" id="large-text">
+              <div>
+                <h5>Night in the Museum</h5>
+                <p>
+                  Get your family together for an exciting night in the museum
+                  as you sleep over beside dinosaurs and science displays.
+                </p>
+                <p>
+                  Bring your own sleeping bag and get ready to rough it as we go
+                  exploring the wonders of science.
+                </p>
+              </div>
             </div>
           </div>
         </section>
@@ -364,14 +413,20 @@
           <div class="image-wrapper">
             <figure class="clubs">
               <a href="explore.html"
-                ><img src="images\club_1.jpg" alt="" />
+                ><img
+                  src="images\club_1.jpg"
+                  alt="A group of five children aged 8-9 is watching a chemestry experiment involving expanding blue scum, with great excitement."
+                />
                 <figcaption class="clubs">The Young Stars Club</figcaption></a
               >
             </figure>
 
             <figure class="clubs">
               <a href="explore.html"
-                ><img src="images\club_2.jpg" alt="" />
+                ><img
+                  src="images\club_2.jpg"
+                  alt="A boy and a girl aged 12 are in full consetration when they are collaberating to build a small robot-machine on wheels."
+                />
                 <figcaption class="clubs">The Holiday Club</figcaption></a
               >
             </figure>
