--- a/about_us.html
+++ b/about_us.html
@@ -193,8 +193,16 @@
             </p>
           </div>
           <figure class="vision item-2">
-            <img class="mobile" src="images\together.jpg" alt="" />
-            <img class="large-screen" src="images\together_large.jpg" alt="" />
+            <img
+              class="mobile"
+              src="images\together.jpg"
+              alt="A 10 year old white boy and a black girl who is a couple of years younger is studing an mechanical exhibit in a glass monter. They are both holding their hands towards the glass, and the boy is point to something of interest."
+            />
+            <img
+              class="large-screen"
+              src="images\together_large.jpg"
+              alt="A 10 year old white boy and a black girl who is a couple of years younger is studing an mechanical exhibit in a glass monter. They are both holding their hands towards the glass, and the boy is point to something of interest."
+            />
           </figure>
           <div class="vision item-3">
             <h5>Science should be Fun</h5>
@@ -239,31 +247,52 @@
           <h4>Meet Our Passonate Tourguides</h4>
           <div class="image-wrapper">
             <div class="tourguide">
-              <img src="images\charles.png" alt="" />
+              <img
+                src="images\charles.png"
+                alt="A white man in his late twenties with brown hair and a subtile smile in his short beard"
+              />
               <figcaption>CHARLES</figcaption>
             </div>
             <div class="tourguide">
-              <img src="images\marie.png" alt="" />
+              <img
+                src="images\marie.png"
+                alt="A young woman with pale skin, blue eyes, curly hair and a big smile"
+              />
               <figcaption>MARIE</figcaption>
             </div>
             <div class="tourguide">
-              <img src="images\rosalind.png" alt="" />
+              <img
+                src="images\rosalind.png"
+                alt="A young woman with shoulder long dark hair sitting and looking up into the camera, smiling"
+              />
               <figcaption>ROSALIND</figcaption>
             </div>
             <div class="tourguide">
-              <img src="images\alexander.png" alt="" />
+              <img
+                src="images\alexander.png"
+                alt="A young asian man with dark hair and eyes smiling into the camera"
+              />
               <figcaption>ALEXANDER</figcaption>
             </div>
             <div class="tourguide">
-              <img src="images\isaac.png" alt="" />
+              <img
+                src="images\isaac.png"
+                alt="A white man in his early thirties with half long hair and who is sporting a red cap and a smile"
+              />
               <figcaption>ISAAC</figcaption>
             </div>
             <div class="tourguide">
-              <img src="images\albert.png" alt="" />
+              <img
+                src="images\albert.png"
+                alt="A black man about 30 years old with short hair, glasses and a happy smiling look"
+              />
               <figcaption>ALBERT</figcaption>
             </div>
             <div class="tourguide">
-              <img src="images\rhonda.png" alt="" />
+              <img
+                src="images\rhonda.png"
+                alt="A woman in her mid twenties with long brown hair and a big white smile."
+              />
               <figcaption>RHONDA</figcaption>
             </div>
           </div>
