--- a/exhibitions.html
+++ b/exhibitions.html
@@ -211,10 +211,16 @@
             <span class="fa fa-arrow-circle-right purple"></span>
             <span class="fa fa-arrow-circle-down purple"></span>
             <figure class="card">
-              <img src="images\cosmology.jpg" alt="" />
+              <img
+                src="images\cosmology.jpg"
+                alt="Full size exhbit of the moonlanding with an astronaut standing in front of the Lunar Module"
+              />
             </figure>
             <figure class="card-large">
-              <img src="images\cosmology_large.jpg" alt="" />
+              <img
+                src="images\cosmology_large.jpg"
+                alt="Full size exhbit of the moonlanding with an astronaut standing in front of the Lunar Module"
+              />
             </figure>
           </div>
           <div class="card-wrapper">
@@ -239,10 +245,16 @@
             <span class="fa fa-arrow-circle-left blue reverse"></span>
             <span class="fa fa-arrow-circle-down blue"></span>
             <figure class="card">
-              <img src="images\evolution.jpg" alt="" />
+              <img
+                src="images\evolution.jpg"
+                alt="Exhibit of a full mammuth sceleton"
+              />
             </figure>
             <figure class="card-large reverse">
-              <img src="images\evolution_large.jpg" alt="" />
+              <img
+                src="images\evolution_large.jpg"
+                alt="Exhibit of a full mammuth sceleton"
+              />
             </figure>
           </div>
           <div class="card-wrapper">
@@ -267,10 +279,16 @@
             <span class="fa fa-arrow-circle-right dark-green"></span>
             <span class="fa fa-arrow-circle-down dark-green"></span>
             <figure class="card">
-              <img src="images\biology.jpg" alt="" />
+              <img
+                src="images\biology.jpg"
+                alt="A young girl is studing a sample with a microscope"
+              />
             </figure>
             <figure class="card-large">
-              <img src="images\biology_large.jpg" alt="" />
+              <img
+                src="images\biology_large.jpg"
+                alt="A young girl is studing a sample with a microscope"
+              />
             </figure>
           </div>
           <div class="card-wrapper">
@@ -292,10 +310,16 @@
             <span class="fa fa-arrow-circle-left orange reverse"></span>
             <span class="fa fa-arrow-circle-down orange"></span>
             <figure class="card">
-              <img src="images\robotics.jpg" alt="" />
+              <img
+                src="images\robotics.jpg"
+                alt="Image of Rob the Robot, who is looking into the camera with his right arm raised."
+              />
             </figure>
             <figure class="card-large reverse">
-              <img src="images\robotics_large.jpg" alt="" />
+              <img
+                src="images\robotics_large.jpg"
+                alt="Image of Rob the Robot, who is looking into the camera with his right arm raised."
+              />
             </figure>
           </div>
           <div class="card-wrapper">
@@ -319,22 +343,48 @@
             <span class="fa fa-arrow-circle-right magenta"></span>
             <span class="fa fa-arrow-circle-down magenta"></span>
             <figure class="card">
-              <img src="images\ecology.jpg" alt="" />
+              <img
+                src="images\ecology.jpg"
+                alt="Exhibit of an interactive model of the planet Earths weather system"
+              />
             </figure>
             <figure class="card-large">
-              <img src="images\ecology_large.jpg" alt="" />
+              <img
+                src="images\ecology_large.jpg"
+                alt="Exhibit of an interactive model of the planet Earths weather system"
+              />
             </figure>
           </div>
         </section>
         <section class="photo-gallery">
           <h3>Come Visit Us and Continue Your Exploration</h3>
           <div class="image-wrapper">
-            <figure><img src="../images/gallery-1.jpg" alt="" /></figure>
-            <figure><img src="../images/gallery-2.jpg" alt="" /></figure>
+            <figure>
+              <img
+                src="../images/gallery-1.jpg"
+                alt="A teenage boy with virtual reality headset is holding a paintbrush"
+              />
+            </figure>
+            <figure>
+              <img
+                src="../images/gallery-2.jpg"
+                alt="A human figure showing the inner organs"
+              />
+            </figure>
             <figure><img src="../images/gallery-3.jpg" alt="" /></figure>
-            <figure><img src="../images/gallery-4.jpg" alt="" /></figure>
+            <figure>
+              <img
+                src="../images/gallery-4.jpg"
+                alt="Model of a human hearth"
+              />
+            </figure>
             <figure><img src="../images/gallery-5.jpg" alt="" /></figure>
-            <figure><img src="../images/gallery-6.jpg" alt="" /></figure>
+            <figure>
+              <img
+                src="../images/gallery-6.jpg"
+                alt="a kid with virtual reality headset"
+              />
+            </figure>
           </div>
           <p class="visit">"More Than 1000 Unique Exhibits to Explore"</p>
         </section>
