--- a/visit.html
+++ b/visit.html
@@ -259,7 +259,7 @@
         </section>
         <section class="facilities">
           <figure class="facilities item-1">
-            <img src="../images/handicap.jpg" alt="" />
+            <!-- <img src="../images/handicap.jpg" alt="close up photo of a handicap parking space" /> -->
           </figure>
           <div id="accessibility" class="facilities item-2">
             <h3>Accessibility</h3>
@@ -270,7 +270,7 @@
             </p>
           </div>
           <figure class="facilities item-3">
-            <img src="images\cafe.jpg" alt="" />
+            <!-- <img src="images\cafe.jpg" alt="photo of the counter area of the cafe" /> -->
           </figure>
           <div id="food-drink" class="facilities item-4">
             <h3>Food and Drink</h3>
@@ -280,7 +280,7 @@
             </p>
           </div>
           <figure class="facilities item-5">
-            <img src="images\shop.jpg" alt="" />
+            <!-- <img src="images\shop.jpg" alt="close up photo of dinosaur lego models sold in the shop" /> -->
           </figure>
           <div id="shop" class="facilities item-6">
             <h3>Shop</h3>
