--- a/exhibitions.html
+++ b/exhibitions.html
@@ -208,8 +208,20 @@
                 </p>
               </div>
             </div>
-            <span class="fa fa-arrow-circle-right purple"></span>
-            <span class="fa fa-arrow-circle-down purple"></span>
+            <figure class="arrow-down">
+              <img
+                src="images\icons\arrow-circle-down-purple.png"
+                alt=""
+                class="arrow-down"
+              />
+            </figure>
+            <figure class="arrow-left-right">
+              <img
+                src="images\icons\arrow-circle-right-purple.png"
+                alt=""
+                class="arrow-left-right"
+              />
+            </figure>
             <figure class="card">
               <img
                 src="images\cosmology.jpg"
@@ -242,8 +254,20 @@
                 </p>
               </div>
             </div>
-            <span class="fa fa-arrow-circle-left blue reverse"></span>
-            <span class="fa fa-arrow-circle-down blue"></span>
+            <figure class="arrow-down">
+              <img
+                src="images\icons\arrow-circle-down-blue.png"
+                alt=""
+                class="arrow-down"
+              />
+            </figure>
+            <figure class="arrow-left-right reverse-arrow">
+              <img
+                src="images\icons\arrow-circle-left-blue.png"
+                alt=""
+                class="arrow-left-right"
+              />
+            </figure>
             <figure class="card">
               <img
                 src="images\evolution.jpg"
@@ -276,8 +300,20 @@
                 </p>
               </div>
             </div>
-            <span class="fa fa-arrow-circle-right dark-green"></span>
-            <span class="fa fa-arrow-circle-down dark-green"></span>
+            <figure class="arrow-down">
+              <img
+                src="images\icons\arrow-circle-down-dark_green.png"
+                alt=""
+                class="arrow-down"
+              />
+            </figure>
+            <figure class="arrow-left-right">
+              <img
+                src="images\icons\arrow-circle-right-dark_green.png"
+                alt=""
+                class="arrow-left-right"
+              />
+            </figure>
             <figure class="card">
               <img
                 src="images\biology.jpg"
@@ -307,8 +343,20 @@
                 </p>
               </div>
             </div>
-            <span class="fa fa-arrow-circle-left orange reverse"></span>
-            <span class="fa fa-arrow-circle-down orange"></span>
+            <figure class="arrow-down">
+              <img
+                src="images\icons\arrow-circle-down-orange.png"
+                alt=""
+                class="arrow-down"
+              />
+            </figure>
+            <figure class="arrow-left-right reverse-arrow">
+              <img
+                src="images\icons\arrow-circle-left-orange.png"
+                alt=""
+                class="arrow-left-right"
+              />
+            </figure>
             <figure class="card">
               <img
                 src="images\robotics.jpg"
@@ -340,8 +388,20 @@
                 </p>
               </div>
             </div>
-            <span class="fa fa-arrow-circle-right magenta"></span>
-            <span class="fa fa-arrow-circle-down magenta"></span>
+            <figure class="arrow-down">
+              <img
+                src="images\icons\arrow-circle-down-magenta.png"
+                alt=""
+                class="arrow-down"
+              />
+            </figure>
+            <figure class="arrow-left-right">
+              <img
+                src="images\icons\arrow-circle-right-magenta.png"
+                alt=""
+                class="arrow-left-right"
+              />
+            </figure>
             <figure class="card">
               <img
                 src="images\ecology.jpg"
