--- a/exhibitions.html
+++ b/exhibitions.html
@@ -189,7 +189,8 @@
         <h1 class="mobile">Exhibitions</h1>
         <h1 class="large-screen">Our Exhibits are Divided Into 5 Spaces</h1>
         <section class="main-content">
-          <div class="card-wrapper">
+          <div id="cosmology-anchor"></div>
+          <div class="card-wrapper" id="card-wrapper-cosmology">
             <div class="card">
               <h2 id="cosmology">COSMOLOGY</h2>
               <div class="cosmology background">
@@ -235,6 +236,7 @@
               />
             </figure>
           </div>
+          <div id="evolution-anchor"></div>
           <div class="card-wrapper">
             <div class="card reverse">
               <h2 id="evolution">EVOLUTION</h2>
@@ -281,6 +283,7 @@
               />
             </figure>
           </div>
+          <div id="biology-anchor"></div>
           <div class="card-wrapper">
             <div class="card">
               <h2 id="biology">BIOLOGY & MEDICINE</h2>
@@ -327,6 +330,7 @@
               />
             </figure>
           </div>
+          <div id="robotics-anchor"></div>
           <div class="card-wrapper">
             <div class="card reverse">
               <h2 id="robotics">ROBOTICS & AI</h2>
@@ -370,6 +374,7 @@
               />
             </figure>
           </div>
+          <div id="ecology-anchor"></div>
           <div class="card-wrapper">
             <div class="card">
               <h2 id="ecology">ECOLOGY</h2>
