--- a/explore.html
+++ b/explore.html
@@ -206,6 +206,7 @@
             <p>You can also join one of our popular science clubs.</p>
           </div>
           <div class="margins" id="item-2">
+            <div id="club-anchor"></div>
             <h4>Join a Childrens Club</h4>
             <h5>Young Stars Club</h5>
             <p>
