--- a/index.html
+++ b/index.html
@@ -216,37 +216,39 @@
         </div>
         <section class="categories">
           <div class="color-box" id="cosmology">
-            <a href="exhibitions.html">
-              <figure><span class="fa fa-globe-americas"></span></figure>
+            <a href="exhibitions.html#cosmology-anchor">
+              <figure id="planet">
+                <img src="images/icons/planet_white.png" alt="" />
+              </figure>
               <figcaption>COSMOLOGY</figcaption></a
             >
           </div>
           <div class="color-box" id="evolution">
-            <a href="exhibitions.html">
+            <a href="exhibitions.html#evolution-anchor">
               <figure><span class="fa fa-dna"></span></figure>
               <figcaption>EVOLUTION</figcaption></a
             >
           </div>
           <div class="color-box" id="biology">
-            <a href="exhibitions.html">
+            <a href="exhibitions.html#biology-anchor">
               <figure><span class="fa fa-microscope"></span></figure>
               <figcaption>BIOLOGY & MEDICINE</figcaption></a
             >
           </div>
           <div class="color-box" id="robotics">
-            <a href="exhibitions.html">
+            <a href="exhibitions.html#robotics-anchor">
               <figure><span class="fa fa-robot"></span></figure>
               <figcaption>ROBOTICS & AI</figcaption></a
             >
           </div>
           <div class="color-box" id="ecology">
-            <a href="exhibitions.html">
+            <a href="exhibitions.html#ecology-anchor">
               <figure><span class="fa fa-globe-americas"></span></figure>
               <figcaption>ECOLOGY</figcaption></a
             >
           </div>
           <div class="color-box" id="events">
-            <a href="exhibitions.html">
+            <a href="#news-anchor">
               <figure><span class="fa fa-rocket"></span></figure>
               <figcaption>SPECIAL EVENTS</figcaption></a
             >
@@ -268,7 +270,8 @@
 
       <div class="secondary-container">
         <section class="news">
-          <h4>NEWS: Special Events & Exhibitions</h4>
+          <div id="news-anchor"></div>
+          <h4 id="special-event">NEWS: Special Events & Exhibitions</h4>
           <label class="aeronautic-label" for="aeronautic">
             <div id="aeronautic-image">
               <img
@@ -412,7 +415,7 @@
           <h4 id="clubs">Join One of Our Children Clubs</h4>
           <div class="image-wrapper">
             <figure class="clubs">
-              <a href="explore.html"
+              <a href="explore.html#club-anchor"
                 ><img
                   src="images\club_1.jpg"
                   alt="A group of five children aged 8-9 is watching a chemestry experiment involving expanding blue scum, with great excitement."
@@ -422,7 +425,7 @@
             </figure>
 
             <figure class="clubs">
-              <a href="explore.html"
+              <a href="explore.html#club-anchor"
                 ><img
                   src="images\club_2.jpg"
                   alt="A boy and a girl aged 12 are in full consetration when they are collaberating to build a small robot-machine on wheels."
